rounding exchange down to one cent